--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
             <div class="row">
                     <div class="six columns">
                         <div class="contenido-hero">
-                                <h2>Aprende algo nuevo</h2>
-                                <p>Todos los cursos a $15</p>
+                                <h2>La tiendita</h2>
+                                <p>Articulos para el hogar</p>
                                 <form action="#" id="busqueda" method="post" class="formulario">
                                     <input class="u-full-width" type="text" placeholder="¿Que te gustaría Aprender?" id="buscador">
                                     <input type="submit" id="submit-buscador" class="submit-buscador">
